--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,26 @@
   <meta name="description" content="Web site created using create-react-app" />
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
 
+  <title>Meta Tags — Preview, Edit and Generate</title>
+  <meta name="title" content="Bardia Shahnazi">
+  <meta name="description" content="My little introduction , resume and the way to communicate with me">
+
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://metatags.io/">
+  <meta property="og:title" content="Bardia Shahnazi">
+  <meta property="og:description" content="My little introduction , resume and the way to communicate with me">
+  <meta property="og:image"
+    content="https://metatags.io/assets/meta-tags-16a33a6a8531e519cc0936fbba0ad904e52d35f34a46c97a2c9f6f7dd7d336f2.png">
+
+  <!-- Twitter -->
+  <meta property="twitter:card" content="summary_large_image">
+  <meta property="twitter:url" content="https://metatags.io/">
+  <meta property="twitter:title" content="Bardia Shahnazi">
+  <meta property="twitter:description" content="My little introduction , resume and the way to communicate with me">
+  <meta property="twitter:image"
+    content="https://metatags.io/assets/meta-tags-16a33a6a8531e519cc0936fbba0ad904e52d35f34a46c97a2c9f6f7dd7d336f2.png">
+
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
   <title>React App</title>
