--- a/public/index.html
+++ b/public/index.html
@@ -31,7 +31,7 @@
 
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
-  <title>React App</title>
+  <title>Bardia Shahnazi</title>
 </head>
 
 <body>
