Adding some Changes

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-
   <!-- Primary Meta Tags -->
   <title>Bardia Shahnazi</title>
   <meta name="title" content="Bardia Shahnazi">
@@ -15,7 +14,7 @@
 
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website">
-  <meta property="og:url" content="https://metatags.io/">
+  <meta property="og:url" content="https://portofolio-bawrdiii.vercel.app/">
   <meta property="og:title" content="Bardia Shahnazi">
   <meta property="og:description" content="My little introduction, resume, and the way to communicate with me">
   <meta property="og:image"
@@ -23,7 +22,7 @@
 
   <!-- Twitter -->
   <meta property="twitter:card" content="summary_large_image">
-  <meta property="twitter:url" content="https://metatags.io/">
+  <meta property="twitter:url" content="https://portofolio-bawrdiii.vercel.app/">
   <meta property="twitter:title" content="Bardia Shahnazi">
   <meta property="twitter:description" content="My little introduction, resume, and the way to communicate with me">
   <meta property="twitter:image"
