--- a/public/index.html
+++ b/public/index.html
@@ -17,16 +17,14 @@
   <meta property="og:url" content="https://portofolio-bawrdiii.vercel.app/">
   <meta property="og:title" content="Bardia Shahnazi">
   <meta property="og:description" content="My little introduction, resume, and the way to communicate with me">
-  <meta property="og:image"
-    content="https://metatags.io/assets/meta-tags-16a33a6a8531e519cc0936fbba0ad904e52d35f34a46c97a2c9f6f7dd7d336f2.png">
+  <meta property="og:image" content="/icons/Coding-workshop.svg">
 
   <!-- Twitter -->
   <meta property="twitter:card" content="summary_large_image">
   <meta property="twitter:url" content="https://portofolio-bawrdiii.vercel.app/">
   <meta property="twitter:title" content="Bardia Shahnazi">
   <meta property="twitter:description" content="My little introduction, resume, and the way to communicate with me">
-  <meta property="twitter:image"
-    content="https://metatags.io/assets/meta-tags-16a33a6a8531e519cc0936fbba0ad904e52d35f34a46c97a2c9f6f7dd7d336f2.png">
+  <meta property="twitter:image" content="/icons/Coding-workshop.svg">
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
 </head>
